# idealista-scraper

./: .dockerignore  .env.example  .gitignore  Database.py  Dockerfile  IdealistaScraper.py  Location.py  LocationsScraper.py  Logger.py  Money.py  README.md  async_scraper.py  constants.py  db.py  docker-compose.yml  main.py  property.py  pyproject.toml  utils.py
app/: app.py
constants/: constants.py
core/: Database.py  utils.py
core/models/: Money.py  Property.py
models/: Property.py  PropertyDetails.py
scraper/: IdealistaScraper.py  LocationsScraper.py  __main__.py
services/: LocationService.py
