[project]
name = "idealista-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bs4>=0.0.2",
    "curl-cffi>=0.9.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
    "supabase>=2.6.0",
]
